infra/istio/authorization-policy.yaml
# Nâng cao: Service Mesh - Authorization Policies
# Chỉ cho phép service được phép giao tiếp mới kết nối được

---
# Deny all traffic by default trong namespace yas
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: yas
spec:
  {}

---
# Cho phép Ingress Controller trong mesh truy cập vào YAS services
# ingress-nginx đã được inject sidecar nên có identity rõ ràng trong mesh.
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-ingress-to-yas
  namespace: yas
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
          - "cluster.local/ns/ingress-nginx/sa/ingress-nginx"

---
# Cho phép BFF và nginx reverse proxy gọi đến tất cả backend services
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-bff-to-backends
  namespace: yas
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
          - "cluster.local/ns/yas/sa/backoffice-bff"
          - "cluster.local/ns/yas/sa/storefront-bff"
          - "cluster.local/ns/yas/sa/nginx"

---
# Cho phép order gọi đến cart, payment, inventory, tax, customer
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-order-dependencies
  namespace: yas
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: cart
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/yas/sa/order"]


---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-order-to-tax
  namespace: yas
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: tax
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/yas/sa/order"]

---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-order-to-inventory
  namespace: yas
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: inventory
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/yas/sa/order"]

---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-order-to-customer
  namespace: yas
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: customer
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/yas/sa/order"]

---
# Cho phép search gọi đến product
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-search-to-product
  namespace: yas
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: product
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/yas/sa/search"]
